> fix: items fall where they are dropped now > instead of DONE and REARRANGE actions now only DONE > minor cleanups & refactors > fix weird jumping issue on drop

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -65,12 +65,12 @@
 	background-color: rgb(0, 221, 236);
 }
 
-.dragcomplete {
-	background-color: rgb(255, 38, 0);
-}
-
 .remove {
 	background-color: rgb(235, 103, 80);
+}
+
+.dragcomplete {
+	background-color: rgb(255, 38, 0);
 }
 
 .todos__heading {
@@ -85,7 +85,6 @@
 	padding: 20px;
 	margin-top: 15px;
 	background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
-	transition: 0.2s;
 }
 
 .drag {
